--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -20,7 +20,7 @@
         android:id="@+id/img_camera_side"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_loop"
+        android:src="@mipmap/ic_change_cam_side"
         android:layout_gravity="center"
         android:layout_margin="5dp"/>
 
