--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,5 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <bjtu.makeupapp.components.BottomLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
 
