--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -6,13 +6,13 @@
     android:background="@android:color/white">
 
     <TextView
-        android:id="@+id/title_textview"
-        android:layout_width="0dp"
+        android:id="@+id/style_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Make Up Now!"
+        android:text="Make up now!"
         android:textColor="@android:color/black"
         android:textSize="24sp"/>
 
